<?xml version="1.0"?>
<package format="2">
  <name>experiment_metrics</name>
  <version>0.1.0</version>
  <description>Run-level metrics recorder for multi-UAV RACER simulations.</description>

  <maintainer email="qian@example.com">qian</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export/>
</package>
